--- a/index.html
+++ b/index.html
@@ -149,28 +149,26 @@
 
       <hr>
 
-      <!-- STRIP CALCULATOR -->
-      <h3>Strip Calculator</h3>
+     <h3>Strip Calculator</h3>
 
-      <label>Strip Width (inches):
-        <input type="number" id="stripWidthInput" value="2.5" min="0" step="0.25">
-      </label>
+<label>Sashing Strip Width (cut width, inches):
+  <input type="number" id="sashStripWidthInput" value="2" min="0" step="0.25">
+</label>
 
-      <label>Total Finished Length Needed (inches):
-        <input type="number" id="stripLengthInput" value="100" min="0">
-      </label>
+<label>Binding Strip Width (cut width, inches):
+  <input type="number" id="bindingStripWidthInput" value="2.5" min="0" step="0.25">
+</label>
 
-      <button id="calcStripsBtn">Calculate Strips</button>
+<button id="calcStripsBtn">Calculate Strips</button>
 
-      <div id="stripCalcOutput" class="calc-output">
-        Strips per WOF: —<br>
-        Total Strips Needed: —<br>
-        Total Inches: —<br>
-        Yardage: —<br>
-      </div>
-
-    </div>
-  </div>
+<div id="stripCalcOutput" class="calc-output">
+  Sashing Strips Needed: —<br>
+  Sashing Border Strips Needed: —<br>
+  Binding Strips Needed: —<br>
+  Total Strips: —<br>
+  Total Inches: —<br>
+  Yardage: —<br>
+</div>
 
   <!-- SCRIPT FILES -->
   <script src="js/grid.js"></script>
