Refactor Strip Calculator section in index.html

--- a/index.html
+++ b/index.html
@@ -149,27 +149,29 @@
 
       <hr>
 
-     <h3>Strip Calculator</h3>
+    <!-- STRIP CALCULATOR -->
+
+<h3>Strip Calculator</h3>
 
 <label>Sashing Strip Width (cut width, inches):
-  <input type="number" id="sashStripWidthInput" value="2" min="0" step="0.25">
+    <input type="number" id="sashStripWidthInput" value="2" min="0" step="0.25">
 </label>
 
 <label>Binding Strip Width (cut width, inches):
-  <input type="number" id="bindingStripWidthInput" value="2.5" min="0" step="0.25">
+    <input type="number" id="bindingStripWidthInput" value="2.5" min="0" step="0.25">
 </label>
 
 <button id="calcStripsBtn">Calculate Strips</button>
 
 <div id="stripCalcOutput" class="calc-output">
-  Sashing Strips Needed: —<br>
-  Sashing Border Strips Needed: —<br>
-  Binding Strips Needed: —<br>
-  Total Strips: —<br>
-  Total Inches: —<br>
-  Yardage: —<br>
+    Sashing Strips Needed: —<br>
+    Sashing Border Strips Needed: —<br>
+    Binding Strips Needed: —<br>
+    Total Strips: —<br>
+    Total Inches: —<br>
+    Yardage: —<br>
 </div>
-
+      
   <!-- SCRIPT FILES -->
   <script src="js/grid.js"></script>
   <script src="js/color-system.js"></script>
