Fix indentation in index.html

--- a/index.html
+++ b/index.html
@@ -170,7 +170,9 @@
     Total Inches: —<br>
     Yardage: —<br>
 </div>
-      
+
+      </div>
+    </div>
   <!-- SCRIPT FILES -->
   <script src="js/grid.js"></script>
   <script src="js/color-system.js"></script>
