--- a/index.html
+++ b/index.html
@@ -2,9 +2,17 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Quilt Planner</title>
 
+  <!-- CSS -->
   <link rel="stylesheet" href="css/app.css" />
+
+  <!-- JS (defer = DOM loads first) -->
+  <script src="js/grid.js" defer></script>
+  <script src="js/color-system.js" defer></script>
+  <script src="js/calculator.js" defer></script>
+  <script src="js/main.js" defer></script>
 </head>
 
 <body>
@@ -16,91 +24,114 @@
   <div class="main-layout">
 
     <!-- LEFT PANEL -->
-<div class="panel controls">
-  <h2>Quilt Settings</h2>
+    <div class="panel controls">
+      <h2>Quilt Settings</h2>
 
-  <label>Rows (blocks)
-    <input type="number" id="rowsInput" value="3" min="1" />
-  </label>
+      <label>Rows (blocks)
+        <input type="number" id="rowsInput" value="3" min="1" />
+      </label>
 
-  <label>Columns (blocks)
-    <input type="number" id="colsInput" value="3" min="1" />
-  </label>
+      <label>Columns (blocks)
+        <input type="number" id="colsInput" value="3" min="1" />
+      </label>
 
-  <label>Block width (inches)
-    <input type="number" id="blockWidthInput" value="15" min="1" />
-  </label>
+      <label>Block width (inches)
+        <input type="number" id="blockWidthInput" value="15" min="1" />
+      </label>
 
-  <label>Block height (inches)
-    <input type="number" id="blockHeightInput" value="18" min="1" />
-  </label>
+      <label>Block height (inches)
+        <input type="number" id="blockHeightInput" value="18" min="1" />
+      </label>
 
-  <!-- SASHING -->
-  <label>Sashing width (inches)</label>
-  <div class="inline-row">
-    <input type="number" id="sashingWidthInput" value="2" min="0" />
-    <div class="color-box">
-      <input type="color" id="sashingColorPicker" value="#bfbfbf" />
+      <!-- SASHING -->
+      <label>Sashing width (inches)</label>
+      <div class="inline-row">
+        <input type="number" id="sashingWidthInput" value="2" min="0" />
+        <div class="color-box">
+          <input type="color" id="sashingColorPicker" value="#bfbfbf" />
+        </div>
+      </div>
+
+      <button id="toggleSashingBtn">Toggle Sashing On/Off</button>
+
+      <!-- SASHING BORDER -->
+      <label>Sashing Border width (inches)</label>
+      <div class="inline-row">
+        <input type="number" id="sashingBorderWidthInput" value="2" min="0" />
+        <div class="color-box">
+          <input type="color" id="sashingBorderColorPicker" value="#666666" />
+        </div>
+      </div>
+
+      <button id="toggleSashingBorderBtn">Toggle Sashing Border On/Off</button>
+
+      <!-- OUTER BORDER -->
+      <label>Border width (inches)</label>
+      <div class="inline-row">
+        <input type="number" id="borderWidthInput" value="4" min="0" />
+        <div class="color-box">
+          <input type="color" id="borderColorPicker" value="#8c8c8c" />
+        </div>
+      </div>
+
+      <!-- FABRIC IMAGE UPLOAD -->
+      <label>Fabric Image Upload
+        <input type="file" id="fabricUpload" accept="image/*" />
+      </label>
+
+      <!-- ACTIVE COLOR -->
+      <label>Active Color
+        <input type="color" id="colorInput" value="#ffcc00" />
+      </label>
+
+      <!-- BUILD BUTTON (moved under Active Color) -->
+      <button id="buildGridBtn">Build / Update Grid</button>
+
+      <!-- COLOR SECTION -->
+      <div class="color-section">
+
+        <!-- RGB (kept for JS, hidden by CSS via .rgb-section) -->
+        <div class="rgb-section">
+          <h3>RGB</h3>
+          <div class="color-rgb-row">
+            <label>R
+              <input type="number" id="colorR" min="0" max="255" value="255" />
+            </label>
+            <label>G
+              <input type="number" id="colorG" min="0" max="255" value="204" />
+            </label>
+            <label>B
+              <input type="number" id="colorB" min="0" max="255" value="0" />
+            </label>
+          </div>
+        </div>
+
+        <h3>Preset Colors</h3>
+        <div class="color-palette">
+          <div class="color-swatch" data-color="#ffffff" style="background:#ffffff;"></div>
+          <div class="color-swatch" data-color="#d9d9d9" style="background:#d9d9d9;"></div>
+          <div class="color-swatch" data-color="#555555" style="background:#555555;"></div>
+          <div class="color-swatch" data-color="#000000" style="background:#000000;"></div>
+          <div class="color-swatch" data-color="#ff0000" style="background:#ff0000;"></div>
+          <div class="color-swatch" data-color="#0066ff" style="background:#0066ff;"></div>
+          <div class="color-swatch" data-color="#00aa55" style="background:#00aa55;"></div>
+          <div class="color-swatch" data-color="#d4af37" style="background:#d4af37;"></div>
+        </div>
+
+        <h3>Saved Colors</h3>
+        <div class="color-saved-row">
+          <div class="color-swatch empty saved-swatch" data-index="0"></div>
+          <div class="color-swatch empty saved-swatch" data-index="1"></div>
+          <div class="color-swatch empty saved-swatch" data-index="2"></div>
+          <div class="color-swatch empty saved-swatch" data-index="3"></div>
+          <div class="color-swatch empty saved-swatch" data-index="4"></div>
+          <div class="color-swatch empty saved-swatch" data-index="5"></div>
+        </div>
+
+      </div>
     </div>
-  </div>
-  <button id="toggleSashingBtn">Toggle Sashing On/Off</button>
 
-  <!-- SASHING BORDER -->
-  <label>Sashing Border width (inches)</label>
-  <div class="inline-row">
-    <input type="number" id="sashingBorderWidthInput" value="2" min="0" />
-    <div class="color-box">
-      <input type="color" id="sashingBorderColorPicker" value="#666666" />
-    </div>
-  </div>
-  <button id="toggleSashingBorderBtn">Toggle Sashing Border On/Off</button>
-
-  <!-- OUTER BORDER -->
-  <label>Border width (inches)</label>
-  <div class="inline-row">
-    <input type="number" id="borderWidthInput" value="4" min="0" />
-    <div class="color-box">
-      <input type="color" id="borderColorPicker" value="#8c8c8c" />
-    </div>
-  </div>
-
-  <!-- MOVE BUILD GRID BUTTON HERE -->
-  <button id="buildGridBtn">Build / Update Grid</button>
-
-  <!-- ACTIVE COLOR -->
-  <label>Active Color
-    <input type="color" id="colorInput" value="#ffcc00" />
-  </label>
-
-  <!-- COLOR SECTION -->
-  <div class="color-section">
-
-    <h3>Preset Colors</h3>
-    <div class="color-palette">
-      <div class="color-swatch" data-color="#ffffff" style="background:#ffffff;"></div>
-      <div class="color-swatch" data-color="#d9d9d9" style="background:#d9d9d9;"></div>
-      <div class="color-swatch" data-color="#555555" style="background:#555555;"></div>
-      <div class="color-swatch" data-color="#000000" style="background:#000000;"></div>
-      <div class="color-swatch" data-color="#ff0000" style="background:#ff0000;"></div>
-      <div class="color-swatch" data-color="#0066ff" style="background:#0066ff;"></div>
-      <div class="color-swatch" data-color="#00aa55" style="background:#00aa55;"></div>
-      <div class="color-swatch" data-color="#d4af37" style="background:#d4af37;"></div>
-    </div>
-
-    <h3>Saved Colors</h3>
-    <div class="color-saved-row">
-      <div class="color-swatch empty saved-swatch" data-index="0"></div>
-      <div class="color-swatch empty saved-swatch" data-index="1"></div>
-      <div class="color-swatch empty saved-swatch" data-index="2"></div>
-      <div class="color-swatch empty saved-swatch" data-index="3"></div>
-      <div class="color-swatch empty saved-swatch" data-index="4"></div>
-      <div class="color-swatch empty saved-swatch" data-index="5"></div>
-    </div>
-
-  </div>
-</div>
-
-      <!-- GRID PANEL -->
+    <!-- GRID PANEL -->
     <div class="panel grid-wrapper">
       <div class="zoom-row">
         <strong>Zoom:</strong>
@@ -132,7 +163,6 @@
       </label>
 
       <button id="calcFabricBtn">Calculate Fabric Yardage</button>
-
       <div class="calc-output" id="fabricOutput"></div>
 
       <hr>
@@ -150,11 +180,11 @@
       <h3>Strip Calculator</h3>
 
       <label>Sashing Strip Width (cut width, inches):
-        <input type="number" id="sashStripWidthInput" value="2" min="0" step="0.25">
+        <input type="number" id="sashStripWidthInput" value="2" min="0" step="0.25" />
       </label>
 
       <label>Binding Strip Width (cut width, inches):
-        <input type="number" id="bindingStripWidthInput" value="2.5" min="0" step="0.25">
+        <input type="number" id="bindingStripWidthInput" value="2.5" min="0" step="0.25" />
       </label>
 
       <button id="calcStripsBtn">Calculate Strips</button>
@@ -167,15 +197,8 @@
         Total Inches: —<br>
         Yardage: —<br>
       </div>
-
     </div>
   </div>
-
-  <!-- SCRIPT FILES -->
-  <script src="js/grid.js"></script>
-  <script src="js/color-system.js"></script>
-  <script src="js/calculator.js"></script>
-  <script src="js/main.js"></script>
 
 </body>
 </html>
